tests/baselines/reference/varArgParamTypeCheck.errors.txt
varArgParamTypeCheck.ts(12,13): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
varArgParamTypeCheck.ts(17,13): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== varArgParamTypeCheck.ts (2 errors) ====
    function sequence(...sequences:{():void;}[]) {
    }
    
    function callback(clb:()=>void) {
    }
    
    sequence(
        function bar() {
        },
        function foo() {
            callback(()=>{
                this();
                ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
            });
        },
        function baz() {
            callback(()=>{
                this();
                ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
            });
        }
    );
    